Modify same line as did the other branch -

--- a/services.html
+++ b/services.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div>Our Services Page</div>
-    <div>Newly added changes</div>
+    <div>Newly added changes <span>I added this again</span></div>
   </body>
 </html>
