Our team page -

--- a/team.html
+++ b/team.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <div>Our Team Page</div>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta incidunt
+      sunt neque fugit minus inventore non quos vero eligendi obcaecati?
+    </p>
   </body>
 </html>
