Make some further modifications --

--- a/home.html
+++ b/home.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <div>Our Home Page</div>
+    <p>Some extra modifications to detail out our HOME page better.</p>
   </body>
 </html>
