Added some extra features --

--- a/footer.html
+++ b/footer.html
@@ -6,6 +6,9 @@
     <title>Git - Footer</title>
   </head>
   <body>
-    <footer>Here's out footer with some extra details attached to it.</footer>
+    <footer>
+      Here's out footer with some extra details attached to it.
+      <p>Some extra footer feature.</p>
+    </footer>
   </body>
 </html>
